<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="thenightswatch.jaunsar_booking.MainActivity"
    >

    <LinearLayout
        android:layout_width="368dip"
        android:layout_height="551dip"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="22"
        android:fitsSystemWindows="true">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimaryDark">
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/Intro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/introduction"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/date_start"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/start_date" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/set_date" />

        </LinearLayout>

        <TextView
            android:id="@+id/date_end"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/end_date" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/date2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/set_date" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/pickup_location" />

        <EditText
            android:id="@+id/pickup_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/other_locations" />

        <EditText
            android:id="@+id/drop_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/phone_number" />
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:onClick="StartAnotherActivity"
            android:text="@string/Book" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
