<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="thenightswatch.jaunsar_booking.Main2Activity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="10dp"
        tools:layout_editor_absoluteX="8dp"
        android:weightSum="20">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/choice"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startanother"
            android:text="@string/first_driver"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="299dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startmain"
            android:text="@string/first_book_a_cab"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="156dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
